          not hand
 FIXED  : Ticket #778, Playlist interface problem
 FIXED  : Ticket #782, VMR-7 & 9 filter names misspelled
 FIXED  : Ticket #791, Change the cursor behavior
 FIXED  : Ticket #796, MPC HC window doesn't stay snapped to desktop corners
 FIXED  : Ticket #809, Resize-arrows no longer appear with caption hidden


v1.4.2499.0 - 7 September 2010
==============================
 NEW    : Seamless playback support for multi files BRD
 NEW    : Support for Windows 7 taskbar and thumbnails features
 NEW    : Added Catalan, Dutch and Japanese translations
 NEW    : VSFilter x64 is available
 NEW    : Added internal VP8 Decoder
 NEW    : MPC-HC can be compiled with MSVC2010 and Intel C++ Compiler
 NEW    : Support for MCE remote control (values added in AppCommand column in
          "Options/Player/Keys")
 NEW    : Support of Broadcom Video decoder for VC1, H.264 and MPEG-2
          (hardware acceleration)
 NEW    : Support for DVB subtitles
 NEW    : Open files to Recent Documents
 NEW    : AUTO HDMI MODE 1080p/24 support for fullscreen mode
 NEW    : Ticket #46, add number to AudioDevice list
 NEW    : Sync Renderer dialogs
 NEW    : Real Video decoder in MPCVideoDecoder
 NEW    : Support interlaced mode in fullscreen resolution list
 NEW    : Auto change fullscreen resolution for different video content
 NEW    : Fullscreen Options page
 NEW    : Video decoder, options for DXVA Compatibility check
 NEW    : Support for MPEG-2 bitstreaming in the DXVA decoder
 NEW    : Full screen resolution - support for native 23.976 and 29.97 mode
          (Vista and above only)
 NEW    : Auto resolution change for DVD
 NEW    : Always Exit after playback option
 NEW    : Support for SRM7500 remote control
 NEW    : New panel for switching DVB channels, audio and tuner scan
          accessible through View-->Navigation menu when in Capture mode
 NEW    : Automatically play next files in a folder
 NEW    : Implemented 'Quick add favorite' shortcut (default: Shift + Q)